# serializer version: 1
# name: TestProcessTransferJobApplication.test_job_application_external_transfer_disabled_for_bad_state
  '''
  <button class="btn justify-content-start dropdown-item" data-bs-custom-class="c-box--action-tooltip" data-bs-placement="top" data-bs-title="Vous devez d’abord décliner la candidature pour pouvoir la transférer à un autre employeur." data-bs-toggle="tooltip" disabled="" id="transfer_to_button" type="button">
      <i class="ri-arrow-left-right-line me-2">
      </i>
      <span>
          Transférer vers
      </span>
  </button>
  
  '''
# ---
# name: TestProcessTransferJobApplication.test_job_application_external_transfer_only_for_lone_users
  '''
  <a class="btn justify-content-start dropdown-item" href="/apply/[PK of JobApplication]/siae/external-transfer/1" id="transfer_to_button">
      <i class="ri-arrow-left-right-line me-2">
      </i>
      <span>
          Transférer vers
      </span>
  </a>
  
  '''
# ---
# name: TestProcessTransferJobApplication.test_job_application_transfer_enabled[button]
  '''
  <button aria-haspopup="true" class="btn justify-content-start dropdown-item" data-bs-target="#transfer_confirmation_modal" data-bs-toggle="modal" id="transfer_to_button" type="button">
      <i class="ri-arrow-left-right-line me-2">
      </i>
      <span>
          Transférer vers
      </span>
  </button>
  
  '''
# ---
# name: TestProcessTransferJobApplication.test_job_application_transfer_enabled[modal]
  '''
  <div aria-hidden="true" aria-labelledby="transfer_modal_title" class="modal" id="transfer_confirmation_modal" tabindex="-1">
      <div class="modal-dialog modal-dialog-centered">
          <form action="/apply/[PK of JobApplication]/siae/transfer" method="post">
              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
              <div class="modal-content">
                  <div class="modal-header">
                      <h3 class="modal-title" id="transfer_modal_title">
                          Transfert de la candidature
                      </h3>
                      <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button">
                      </button>
                  </div>
                  <div class="modal-body">
                      <div class="form-group form-group-required">
                          <label class="form-label" for="id_target_company_id">
                              Sélectionnez la structure vers laquelle vous souhaitez transférer la candidature.
                          </label>
                          <select class="form-select" id="id_target_company_id" name="target_company_id" required="">
                              <option selected="" value="">
                                  Sélectionnez une structure
                              </option>
                              <option value="[PK of Company]">
                                  EI - Acme inc.
                              </option>
                          </select>
                      </div>
                      <div class="c-info">
                          <span class="c-info__summary">
                              Les commentaires restent internes à votre structure et ne seront pas transmis lors du transfert.
                          </span>
                      </div>
                  </div>
                  <div class="modal-footer">
                      <button class="btn btn-sm btn-outline-primary me-auto" data-bs-dismiss="modal" type="button">
                          Annuler
                      </button>
                      <button class="btn btn-sm btn-ico btn-outline-primary" data-bs-custom-class="modal-tooltip" data-bs-placement="top" data-bs-title="Vous devez d’abord décliner la candidature pour pouvoir la transférer à un autre employeur." data-bs-toggle="tooltip" disabled="" type="button">
                          <i aria-hidden="true" class="ri-home-smile-line">
                          </i>
                          <strong>
                              Une autre structure
                          </strong>
                      </button>
                      <button class="btn btn-sm btn-primary" data-matomo-action="submit" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="batch-transfer-applications-submit">
                          Confirmer
                      </button>
                  </div>
              </div>
          </form>
      </div>
  </div>
  
  '''
# ---
# name: TestProcessTransferJobApplication.test_job_application_transfer_enabled[modal_with_external]
  '''
  <div aria-hidden="true" aria-labelledby="transfer_modal_title" class="modal" id="transfer_confirmation_modal" tabindex="-1">
      <div class="modal-dialog modal-dialog-centered">
          <form action="/apply/[PK of JobApplication]/siae/transfer" method="post">
              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
              <div class="modal-content">
                  <div class="modal-header">
                      <h3 class="modal-title" id="transfer_modal_title">
                          Transfert de la candidature
                      </h3>
                      <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button">
                      </button>
                  </div>
                  <div class="modal-body">
                      <div class="form-group form-group-required">
                          <label class="form-label" for="id_target_company_id">
                              Sélectionnez la structure vers laquelle vous souhaitez transférer la candidature.
                          </label>
                          <select class="form-select" id="id_target_company_id" name="target_company_id" required="">
                              <option selected="" value="">
                                  Sélectionnez une structure
                              </option>
                              <option value="[PK of Company]">
                                  EI - Acme inc.
                              </option>
                          </select>
                      </div>
                      <div class="c-info">
                          <span class="c-info__summary">
                              Les commentaires restent internes à votre structure et ne seront pas transmis lors du transfert.
                          </span>
                      </div>
                  </div>
                  <div class="modal-footer">
                      <button class="btn btn-sm btn-outline-primary me-auto" data-bs-dismiss="modal" type="button">
                          Annuler
                      </button>
                      <a class="btn btn-sm btn-ico btn-outline-primary" href="/apply/[PK of JobApplication]/siae/external-transfer/1">
                          <i aria-hidden="true" class="ri-home-smile-line">
                          </i>
                          <strong>
                              Une autre structure
                          </strong>
                      </a>
                      <button class="btn btn-sm btn-primary" data-matomo-action="submit" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="batch-transfer-applications-submit">
                          Confirmer
                      </button>
                  </div>
              </div>
          </form>
      </div>
  </div>
  
  '''
# ---
# name: TestProcessTransferJobApplication.test_job_application_transfer_enabled[transfer message]
  'La candidature de <>Html Escaped<> DOE a bien été transférée à Acme inc.||Pour la consulter, rendez-vous sur son tableau de bord en changeant de structure'
# ---
# name: test_step_1[progress]
  '''
  <div class="c-stepper mb-3 mb-md-4">
      <div class="d-flex">
          <div class="flex-fill">
              <h2>
                  Transférer la candidature de Jane DOE
              </h2>
              <div class="progress">
                  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="25" class="progress-bar progress-bar-25" role="progressbar">
                  </div>
              </div>
              <p>
                  Rechercher un emploi inclusif
              </p>
          </div>
          <div class="d-flex justify-content-end">
              <a class="btn btn-link btn-ico" href="/apply/11111111-1111-1111-1111-111111111111/siae/details">
                  <i aria-hidden="true" class="ri-close-line">
                  </i>
                  <span>
                      Quitter
                  </span>
              </a>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: test_step_2[progress]
  '''
  <div class="c-stepper mb-3 mb-md-4">
      <div class="d-flex">
          <div class="flex-fill">
              <h2>
                  Transférer la candidature de Jane DOE
              </h2>
              <div class="progress">
                  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" class="progress-bar progress-bar-50" role="progressbar">
                  </div>
              </div>
              <p>
                  Sélectionner les métiers recherchés
              </p>
          </div>
          <div class="d-flex justify-content-end">
              <a class="btn btn-link btn-ico" href="/apply/11111111-1111-1111-1111-111111111111/siae/details">
                  <i aria-hidden="true" class="ri-close-line">
                  </i>
                  <span>
                      Quitter
                  </span>
              </a>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: test_step_3[progress]
  '''
  <div class="c-stepper mb-3 mb-md-4">
      <div class="d-flex">
          <div class="flex-fill">
              <h2>
                  Transférer la candidature de Jane DOE
              </h2>
              <div class="progress">
                  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="75" class="progress-bar progress-bar-75" role="progressbar">
                  </div>
              </div>
              <p>
                  Finaliser la candidature
              </p>
          </div>
          <div class="d-flex justify-content-end">
              <a class="btn btn-link btn-ico" href="/apply/11111111-1111-1111-1111-111111111111/siae/details">
                  <i aria-hidden="true" class="ri-close-line">
                  </i>
                  <span>
                      Quitter
                  </span>
              </a>
          </div>
      </div>
  </div>
  
  '''
# ---
